--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
     section.image-grid {
         display: grid;
         gap: 15px;
-        grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(20px, auto));
         margin-top: 20px;
     }
     div.cyberImage {
@@ -35,8 +35,8 @@
     }
     div.cyberImage  p {
         position: absolute;
-       /* bottom: 5px;
-        left: 50%;*/
+        bottom: 5px;
+        left: 50%;
         transform: translateX(-50%);
         width: 100%;
         text-align: center;
