--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
     section.image-grid {
         display: grid;
         gap: 15px;
-        grid-template-columns: repeat(auto-fit, minmax(50px, auto));
+        grid-template-columns: repeat(2, minmax(50px, auto));
         grid-template-rows:repeat(4,minmax(50px,auto));
         margin-top: 20px;
     }
@@ -77,7 +77,7 @@
         <section> 
 
             <section class="image-grid">
-                <div class="cyberImage"><img src="../images/image1.png" alt="Image 1"><p>Cyber Training 1</p></div>
+                <div class="cyberImage" id=""><img src="../images/image1.png" alt="Image 1"><p>Cyber Training 1</p></div>
                 <div class="cyberImage"><img src="../images/image2.png" alt="Image 2"><p>Cyber Training 2</p></div>
                 <div class="cyberImage"><img src="../images/image3.png" alt="Image 3"><p>Cyber Training 3</p></div>
                 <div class="cyberImage"><img src="../images/image4.png" alt="Image 4"><p>Cyber Training 4</p></div>
