--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
     section.image-grid {
         display: grid;
         gap: 15px;
-        grid-template-columns: repeat(auto-fit, minmax(20px, auto));
+        grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
         grid-template-rows:repeat(2,minmax(50px,auto));
         margin-top: 20px;
     }
