--- a/pages/shape.html
+++ b/pages/shape.html
@@ -7,7 +7,7 @@
     <style>
     section.shapes-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 10px;
         }
 
