--- a/pages/shape.html
+++ b/pages/shape.html
@@ -7,8 +7,8 @@
     <style>
     section.shapes-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+            gap: 1em;
         }
 
         /* Shape box styling */
